--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
            <label><input class="inline" type="radio" name="account-type"> Female</label>
            <label><input class="inline" type="radio" name="account-type"> Other</label>
            <label><input class="inline" type="checkbox" name="terms" required>
-             I accept the <a href="https://kelvino8860.github.io/Html-css/YouTube%20CloneProject/youtube.html" target="_blank">terms and conditions</a>
+             I accept the <a class="clone" href="https://kelvino8860.github.io/Html-css/YouTube%20CloneProject/youtube.html" target="_blank">terms and conditions</a>
           </label>
         </fieldset>
 
