--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           </label>
           <label>Enter Your Email: <input type="email" nam="email" required>
           </label>
-          <label>Enter Your Phone Number: <input type="number" name="phone" minlength="10" maxlength="12" required>
+          <label>Enter Your Phone Number: <input type="text" name="phone" minlength="10" maxlength="12" required>
           </label>
         </fieldset>
 
