--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
         </fieldset>
 
         <fieldset>
-          <label>Upload Your Profile Picture: <input type="file" name="file"></label>
-          <label>Upload Your CV: <input type="file" name="file"></label>
+          <label>Upload Your Profile Picture: <input type="file" name="file" accept="image/*"></label>
+          <label>Upload Your CV: <input type="file" name="file" accept="application/msword, application/vnd.ms-excel, application/vnd.ms-powerpoint,
+            text/plain,application/pdf"></label>
           <label>Input Your Age(Years): <input type="number" min="18" max="40" name="age" required></label>
           <label>How did you here about us?
             <select name="referrer">
